Fixed screen width issue on mobile

--- a/docs/index.css
+++ b/docs/index.css
@@ -164,3 +164,10 @@ input[type="file"] {
         margin-bottom: 100px;
     }
 }
+
+@media only screen and (max-width: 500px) {
+    #left_panel {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
